# ooey

./: .gitignore  CMakeLists.txt  README.md  refinements.md
docs/: 01-project-setup.md  02-core-architecture.md  03-platform-implementation.md  04-mvvmc-framework.md  04-scene-graph-and-input.md  05-advanced-features.md  05-mvvmc-framework.md  06-advanced-features.md  07-text-and-fonts.md  08-framebuffer-platform.md  09-architectural-analysis-and-technical-roadmap.md  09-shape-rendering.md  coding-standards.md  design-decisions.md  interaction-model.md  tutorial-building-a-backend.md
docs/history/: code_clean_up_1.md  emscripten_implementation.md  font_rendering_implementation.md  image_subsystem_implementation.md  layout_engine_implementation.md  list_control_implementation.md  network_controlled_ui.md  page_navigation_implementation.md  performance_optimization.md  project_evolution.md  system_monitor_dashboard.md  text_box_implementation.md  vulkan_implementation.md  wayland_implementation.md  wayland_implementation_summary.md
examples/: CMakeLists.txt  hello_clock_sinusoid.cpp  hello_emscripten.cpp  hello_fonts.cpp  hello_image.cpp  hello_layout.cpp  hello_layout_mvvmc.cpp  hello_list.cpp  hello_network.cpp  hello_ooey.cpp  hello_ooey_modern.cpp  hello_ooey_mvvmc.cpp  hello_ooey_text.cpp  hello_ooey_text_wayland.cpp  hello_ooey_text_x11.cpp  hello_sysinfo.cpp  hello_wayland.cpp  hello_wayland_vulkan.cpp  hello_wizard.cpp  performance_benchmark.cpp  shell.html  tcp_client.py
gooey/include/gooey/: application.hpp
gooey/include/gooey/controls/: button.hpp  column.hpp  flow_layout.hpp  grid.hpp  image_control.hpp  label.hpp  list_control.hpp  row.hpp  text_box.hpp
gooey/include/gooey/mvvmc/: controller.hpp  i_controller.hpp  i_drawable.hpp  i_interactive.hpp  layout.hpp  navigation_coordinator.hpp  property.hpp  scoped_subscription.hpp  subscription_sink.hpp  theme.hpp  view.hpp
gooey/include/gooey/renderer/primitives/: circle_primitive.hpp  curve_primitive.hpp  line_primitive.hpp  (+5 more)
gooey/src/: application.cpp
gooey/src/controls/: button.cpp  column.cpp  flow_layout.cpp  grid.cpp  image_control.cpp  label.cpp  list_control.cpp  row.cpp  text_box.cpp
gooey/src/mvvmc/: controller.cpp  navigation_coordinator.cpp  view.cpp
gooey/src/renderer/primitives/: circle_primitive.cpp  curve_primitive.cpp  line_primitive.cpp  polygon_primitive.cpp  rect_primitive.cpp  rounded_rect_primitive.cpp  sinusoid_primitive.cpp  text_primitive.cpp
include/ooey/: application.hpp  bitmap_font.hpp  controller.hpp  geometry.hpp  i_controller.hpp  i_drawable.hpp  i_interactive.hpp  i_render_target.hpp  i_window_backend.hpp  input.hpp  logging.h  property.hpp  types.hpp  view.hpp
include/ooey/controls/: button.hpp  label.hpp  list_control.hpp  text_box.hpp
include/ooey/mvvmc/: controller.hpp  i_controller.hpp  i_drawable.hpp  i_interactive.hpp  navigation_coordinator.hpp  property.hpp  scoped_subscription.hpp  subscription_sink.hpp  view.hpp
include/ooey/platform/framebuffer/: render_target.hpp  window_backend.hpp
include/ooey/platform/wayland/: render_target.hpp  wayland_window_backend.hpp
include/ooey/platform/x11/: render_target.hpp  window_backend.hpp  x11_window_backend.hpp
include/ooey/primitives/: circle_primitive.hpp  curve_primitive.hpp  line_primitive.hpp  polygon_primitive.hpp  rect_primitive.hpp  rounded_rect_primitive.hpp  sinusoid_primitive.hpp  text_primitive.hpp
include/ooey/renderer/primitives/: circle_primitive.hpp  curve_primitive.hpp  line_primitive.hpp  polygon_primitive.hpp  rect_primitive.hpp  rounded_rect_primitive.hpp  sinusoid_primitive.hpp  text_primitive.hpp
ooey/docs/: 09-architectural-analysis-and-technical-roadmap.md
ooey/include/ooey/: cpp20_features.hpp  i_window_backend.hpp  input.hpp  logging.hpp  ooey.hpp  platform.hpp  types.hpp
ooey/include/ooey/renderer/: bitmap_font.hpp  font_backend.hpp  font_engine.hpp  geometry.hpp  gl_render_target.hpp  i_drawable.hpp  i_image_decoder.hpp  i_render_target.hpp  image.hpp  image_decoder_registry.hpp  software_render_target.hpp  vulkan_render_target.hpp  vulkan_shaders.hpp  window_chrome.hpp
ooey/src/: input.cpp  platform.cpp
ooey/src/platform/emscripten/: render_target.cpp  window_backend.cpp
ooey/src/platform/framebuffer/: render_target.cpp  window_backend.cpp
ooey/src/platform/wayland/: egl_window_backend.cpp  render_target.cpp  vulkan_window_backend.cpp  window_backend.cpp
ooey/src/platform/x11/: window_backend.cpp
ooey/src/renderer/: bitmap_font.cpp  font_engine.cpp  gl_render_target.cpp  image.cpp  image_decoder_registry.cpp  linux_font_backend.cpp  linux_font_backend.hpp  software_render_target.cpp  vulkan_render_target.cpp  win32_font_backend.cpp  win32_font_backend.hpp  window_chrome.cpp
ooey/src/renderer/image/: bmp_decoder.cpp  png_decoder.cpp
ooey/src/renderer/primitives/: circle_primitive.cpp  curve_primitive.cpp  line_primitive.cpp  polygon_primitive.cpp  rect_primitive.cpp  rounded_rect_primitive.cpp  sinusoid_primitive.cpp  text_primitive.cpp
src/: application.cpp  bitmap_font.cpp  controller.cpp  input.cpp  ooey.cpp  view.cpp
src/controls/: button.cpp  label.cpp  list_control.cpp  text_box.cpp
src/mvvmc/: controller.cpp  navigation_coordinator.cpp  view.cpp
src/platform/: platform.cpp
src/platform/framebuffer/: render_target.cpp
src/platform/wayland/: render_target.cpp  wayland_window_backend.cpp  window_backend.cpp
src/platform/x11/: render_target.cpp  window_backend.cpp  x11_window_backend.cpp
src/primitives/: circle_primitive.cpp  curve_primitive.cpp  line_primitive.cpp  polygon_primitive.cpp  rect_primitive.cpp  rounded_rect_primitive.cpp  sinusoid_primitive.cpp  text_primitive.cpp
src/renderer/primitives/: circle_primitive.cpp  curve_primitive.cpp  line_primitive.cpp  polygon_primitive.cpp  rect_primitive.cpp  rounded_rect_primitive.cpp  sinusoid_primitive.cpp  text_primitive.cpp
tests/: CMakeLists.txt  test_core_architecture.cpp  test_font.cpp  test_framebuffer.cpp  test_image.cpp  test_layout.cpp  test_ooey.cpp  test_primitives.cpp
(+17 files in other folders)
